src/test/deca/syntax/invalid/renduInter02/02unary_divide.deca
// Description:
//      Programme lexicalement incorrect
//      => l'opérateur "/" est un opérateur binaire
//
// Resultats:
//      Erreur syntaxique
//      Ligne 10 : token '/' inattendu

{
    int x = /7;
    println("x=", x);
}